# threadlight

./: .gitattributes  .gitignore  2026-01-31-this-session-is-being-continued-from-a-previous-co.txt  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RITUAL_VISION_REVIEW.md  TIER_REVIEW_DEBUG_LOG.md  TODO.md  find_malformed_memories.py  fix_stringified_text.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  DECISIONS.md  MEMORY_EVOLUTION_INTENTIONS.md  RESONANCE_ARCHITECTURE.md  RESONANCE_IMPLEMENTATION_PLAN.md
docs/architecture/: DECISIONS.md  ROADMAP.md  group-chat-spec.md  profile-based-architecture.md  profile-implementation-spec.md
docs/dev/: ARCHITECTURE.md  DECISIONS.md  companion-evolution-impl-spec.md  companion-self-evolution.md
examples/: basic_chat.py  coding_mentor.py  conversation_autosave.py  fable_seed.py  memory_management.py  rituals.py
seeds/: fable_seed_dream.yaml
src/threadlight/: __init__.py  cli.py  config.py  core.py
src/threadlight/api/: __init__.py  server.py
src/threadlight/api/static/: index.html
src/threadlight/api/static/js/: app.js
src/threadlight/capsules/: __init__.py  base.py  custom_types.py  factory.py  imported.py  myth_seed.py  reflection.py  relational.py  ritual.py  style.py  witness.py
src/threadlight/context/: __init__.py  composer.py  soft_memory.py
src/threadlight/decay/: __init__.py  engine.py  scheduler.py
src/threadlight/embeddings/: __init__.py  manager.py
src/threadlight/group_chat/: __init__.py  manager.py  models.py
src/threadlight/import_/: __init__.py  chatgpt_conversations.py  chatgpt_export.py  claude_conversations.py  claude_export.py  claude_projects.py  text_importer.py
src/threadlight/managers/: __init__.py  chat.py  group_chat.py  memory_types.py  model_config.py  profiles.py  style.py
src/threadlight/memory/: __init__.py  orchestrator.py  stopwords.py
src/threadlight/migrations/: migrate_model_to_profile_scope.py
src/threadlight/profiles/: __init__.py  alloyed.py  manager.py  profile.py  templates.py
src/threadlight/providers/: __init__.py  base.py  manager.py  openai.py
src/threadlight/reflection/: __init__.py  prompts.py  selection.py
src/threadlight/rituals/: __init__.py
src/threadlight/storage/: __init__.py  base.py  memory.py  sqlite.py
src/threadlight/style/: __init__.py
src/threadlight/tools/: __init__.py  definitions.py  executor.py
tests/: __init__.py  test_alloyed.py  test_capsules.py  test_chatgpt_import.py  test_claude_import.py  test_context.py  test_core.py  test_decay.py  test_group_chat.py  test_import.py  test_integrated_recall.py  test_integration.py  test_memory_links.py  test_memory_types.py  test_model_config.py  test_nous_api.py  test_orchestrator.py  test_profile_scope.py  test_profiles.py  test_reflection.py  test_stopwords.py  test_storage.py  test_tools.py  test_variant_group_cleanup.py
