[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threadlight"
version = "0.1.4-alpha"
description = "A presence-centered memory framework for AI models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Threadlight Contributors" }
]
keywords = [
    "ai",
    "memory",
    "llm",
    "presence",
    "relational",
    "local-models",
    "llama",
    "openai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",  # For CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
]
all = [
    "threadlight[dev,embeddings,server]",
]

[project.scripts]
threadlight = "threadlight.cli:main"

[project.urls]
Homepage = "https://github.com/threadlight/threadlight"
Documentation = "https://github.com/threadlight/threadlight#readme"
Repository = "https://github.com/threadlight/threadlight"
Issues = "https://github.com/threadlight/threadlight/issues"
Changelog = "https://github.com/threadlight/threadlight/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/seeds",
]

[tool.hatch.build.targets.wheel]
packages = ["src/threadlight"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["threadlight"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/threadlight --cov-report=term-missing"
markers = [
    "integration: marks tests that require external API access (deselect with '-m \"not integration\"')",
    "slow: marks tests that take a long time to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
